[package]
name = "div-pow10"
version = "0.1.0"
edition = "2024"
authors = ["Wu Bingzheng <wubingzheng@gmail.com>"]
description = "Fast division by powers of 10."
license = "MIT"
repository = "https://github.com/WuBingzheng/div-pow10"
documentation = "https://docs.rs/div-pow10"
keywords = ["division"]
categories = ["finance", "mathematics", "no-std", "no-std::no-alloc"]

[dependencies]

[dev-dependencies]
itoa = "1.0"
itoap = {version="1.0"}
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
